conformance/tests/gateway-with-attached-routes-with-port-8080.yaml
# Copyright IBM Corp. 2019, 2022
# SPDX-License-Identifier: Apache-2.0

apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-with-two-listeners-and-one-attached-route
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
  - name: http-unattached
    port: 8080
    protocol: HTTP
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
      namespaces:
        from: All
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
      namespaces:
        from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-4-port-8080
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - kind: Gateway
    name: gateway-with-two-listeners-and-one-attached-route
    namespace: gateway-conformance-infra
    sectionName: http
  rules:
  - backendRefs:
    - name: infra-backend-v1
      port: 8080
